# api-management-service-template

./: .gitignore  CHANGELOG.md  Makefile  README.md  ecs-proxies-containers.yml  ecs-proxies-deploy.yml  manifest_template.yml  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: continuous-integration.yml  pr-lint.yaml
azure/: azure-build-pipeline.yml  azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
azure/templates/: run-ping-tests.yml  run-smoke-tests.yml  run-tests.yml
proxies/live/apiproxy/: proxy.xml
proxies/live/apiproxy/policies/: CallSpineHealthcheck.xml  FlowCallout.GetEnvironmentKeyValueMapData.xml  KeyValueMapOperations.GetSecureVariables.xml  KeyValueMapOperations.GetVariables.xml  OAuthV2.VerifyAccessTokenAppLevel3OrCis2Aal3.xml  RaiseFault.401Unauthorized.xml  javascript.SetStatusResponse.xml
proxies/live/apiproxy/proxies/: default.xml
proxies/live/apiproxy/resources/jsc/: SetStatusResponse.js
proxies/live/apiproxy/targets/: target.xml
proxies/sandbox/apiproxy/: proxy.xml
proxies/sandbox/apiproxy/policies/: KeyValueMapOperations.GetAsid.xml
proxies/sandbox/apiproxy/proxies/: default.xml
proxies/sandbox/apiproxy/targets/: sandbox.xml
sandbox/: Dockerfile  README.md  TODO  app.js  app.spec.js  package-lock.json  package.json
sandbox/mocks/: ExampleData.json
sandbox/routes/example/: example-route.js
sandbox/services/: example-service.js
scripts/: check_python_licenses.sh  deploy_proxy.sh
specification/: example-template.yaml  example-test.yaml  example.yaml  template-api.yaml
specification/components/examples/: ExampleData.json  Patient.json
specification/components/schemas/: ErrorResponse.yaml  ExampleResponse.yaml
terraform/: main.tf
tests/: api_tests.py  pyproject.toml  test_endpoints.py
tests/e2e/: test-runner.js
