[project]
python = "^3.9"
name = "{{ SERVICE_NAME }}"

[tool.poetry]
name = "{{ SERVICE_NAME }}"
version = "0.0.1-alpha"
description = "TODO"
authors = [
    #TODO add authors
]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/api-management-service-template"
homepage = "https://digital.nhs.uk/developer/api-catalogue"
keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pytest-nhsd-apim = "^5.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^3.7.9"
black = "^20.8b1"
pip-licenses = "^2.0.1"
jinja2 = "^3.1.6"
pyyaml = "^5.2"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.9.0"
gitpython = "^3.1.41"
pytest = "^8.2.0"
coverage = "^5.5"
aiohttp = "^3.9.4"
pytest-asyncio = "^0.14.0"

[tool.poetry.scripts]
