[tool.poetry]
name = "{{ SERVICE_NAME }}"
version = "0.0.1-alpha"
description = "TODO"
authors = [
    #TODO add authors
]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/api-management-service-template"
homepage = "https://digital.nhs.uk/developer/api-catalogue"
keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pytest-nhsd-apim = "^5.0.15"

[tool.poetry.group.dev.dependencies]
flake8 = "^3.7.9"
black = "^26.3.1"
pip-licenses = "^2.0.1"
jinja2 = "^3.1.6"
pyyaml = "^6.0.3"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.9.0"
gitpython = "^3.1.46"
pytest = "^8.2.0"
coverage = "^5.5"
aiohttp = "^3.13.5"
pytest-asyncio = "^0.26.0"
cryptography="46.0.6"

[tool.poetry.scripts]
